// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextLine> renders as expected with active class 1`] = `
<div
  className="transcription__line active"
>
  <button
    onClick={[Function]}
  >
    <p
      className="transcription__original"
    >
      another sample string
    </p>
  </button>
  <button
    onClick={[Function]}
  >
    <p
      className="transcription__translation"
    >
      sample string
    </p>
  </button>
</div>
`;

exports[`<TextLine> renders as expected without active class 1`] = `
<div
  className="transcription__line"
>
  <button
    onClick={[Function]}
  >
    <p
      className="transcription__original"
    >
      another sample string
    </p>
  </button>
  <button
    onClick={[Function]}
  >
    <p
      className="transcription__translation"
    >
      sample string
    </p>
  </button>
</div>
`;
